started backend server

--- a/Server/package.json
+++ b/Server/package.json
@@ -2,7 +2,7 @@
   "name": "mightyoaks",
   "version": "1.0.0",
   "description": "",
-  "main": "js/concertsexpress.js",
+  "main": "concertsexpress.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,6 +19,6 @@
   "homepage": "https://github.com/flaviuspintilei/MightyOaks#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "joi": "^13.1.0"
+    "joi": "^13.7.0"
   }
 }
