--- a/Server/package.json
+++ b/Server/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/flaviuspintilei/MightyOaks#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "joi": "^13.7.0"
+    "joi": "^13.7.0",
+    "mssql": "^7.2.1"
   }
 }
