--- a/Server/package.json
+++ b/Server/package.json
@@ -18,8 +18,12 @@
   },
   "homepage": "https://github.com/flaviuspintilei/MightyOaks#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "joi": "^13.7.0",
+    "moment": "^2.29.1",
+    "mongodb": "^4.1.3",
+    "mongoose": "^6.0.12",
     "mssql": "^7.2.1"
   }
 }
